test-ui/ui/invalid_ns_string_input.stderr
error[E0599]: no method named `as_bytes` found for type `u8` in the current scope
 --> ui/invalid_ns_string_input.rs
  |
  |     let _ = ns_string!(1u8);
  |             ^^^^^^^^^^^^^^^ help: there is an associated function with a similar name: `swap_bytes`
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> ui/invalid_ns_string_input.rs
  |
  |     let _ = ns_string!(1u8);
  |             ^^^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> ui/invalid_ns_string_input.rs
  |
  |     let _ = ns_string!(1u8);
  |             ^^^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> ui/invalid_ns_string_input.rs
  |
  |     let _ = ns_string!(1u8);
  |             ^^^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)
